# belytschko

./: .gitignore  README.md  geometry.py  main.py  neighbors.py  plotting.py  pyproject.toml  requirements.txt  simulation.py
src/: grid.py  neighbors.py  plotting.py  simulation.py
