[project]
name = "belytschko"
version = "0.1.0"
description = "A Python implementation of crack growth without remeshing (XFEM-inspired peridynamic demo)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.61.0",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.7",
    "numpy==2.3.5",
    "packaging==25.0",
    "pillow==12.0.0",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "tqdm==4.67.1",
]
